Added a CNPJ search link

--- a/irpf/static/index.html
+++ b/irpf/static/index.html
@@ -124,7 +124,7 @@
             <th>Quantidade</th>
             <th>Preço Unitário</th>
             <th>Valor Líquido</th>
-            <th>CNPJ</th>
+            <th>Pesquisar CNPJ</th>
         </tr>
         </thead>
         <tbody>
@@ -199,7 +199,7 @@
                         <td>${produto.quantidade}</td>
                         <td>${produto.preco_unitario}</td>
                         <td>R$ ${produto.valor_liquido.toFixed(2).replace('.', ',')}</td>
-                        <td><a href="https://www.google.com/search?q=CNPJ de ${produto.nome}" target="_blank">CNPJ</a></td>
+                        <td><a href="https://www.google.com/search?q=Qual é o CNPJ de ${produto.nome}" target="_blank">Pesquisar CNPJ</a></td>
                     `;
 
                 tbody.appendChild(tr);
